# quarkdrop

./: .gitignore  README-zh_Hans.md  README.md  pubspec.yaml
.github/workflows/: release.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/en.lproj/: InfoPlist.strings
ios/Runner/ja.lproj/: InfoPlist.strings
ios/Runner/ko.lproj/: InfoPlist.strings
ios/Runner/zh-Hans.lproj/: InfoPlist.strings
ios/Runner/zh-Hant.lproj/: InfoPlist.strings
lib/: main.dart
lib/l10n/: app_en.arb  app_ja.arb  app_ko.arb  app_zh.arb  app_zh_Hans.arb  app_zh_Hant.arb
lib/src/app/: quarkdrop_app.dart
lib/src/configs/: desktop_layout.dart  launch_at_startup.dart  screen_wakelock.dart
lib/src/l10n/: app_locale.dart  l10n.dart
lib/src/models/: inbox_job.dart  pending_send_item.dart  transfer_job.dart
lib/src/platform/: ios_photo_picker.dart  platform_paths.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/screens/: auto_minimize_overlay.dart  device_mailbox_manage_screen.dart  garbage_cleanup_screen.dart  home_shell.dart  home_shell_mailbox.dart  home_shell_scaffold.dart  home_shell_send.dart  home_shell_settings.dart  home_shell_shared.dart  home_shell_transfers.dart  login_screen.dart  manage_devices_card.dart  manage_devices_screen.dart  root_screen.dart
lib/src/state/: app_store.dart  app_store_auth.dart  app_store_intents.dart  (+4 more)
linux/: CMakeLists.txt
linux/appimage/: AppRun.desktop
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  full_test.rs  lib.rs  preferences.rs  receive.rs  send.rs  single.rs  test_support.rs  workspace.rs
rust/src/api/: app.rs  mod.rs  simple.rs  single_instance_stream.rs
rust/src/auth/: session.rs
rust/src/device/: mod.rs
rust/src/protocol/: commit.rs  crypto.rs  manifest.rs  mod.rs
rust/src/single_instance/: error.rs  mod.rs
rust/src/task/: state.rs  store.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_quarkdrop.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_quarkdrop.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
(+9 files in other folders)
