[package]
name = "rust_lib_quarkdrop"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
full-test = []

[dependencies]
async-stream = "0.3.6"
bytes = "1.10.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
directories = "5.0.1"
flutter_rust_bridge = "=2.11.1"
futures-util = "0.3.31"
hkdf = "0.12.4"
hex = "0.4.3"
libquarkpan = { path = "../../libquarkpan" }
md5 = "0.7.0"
rand = "0.8.5"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.16", features = ["io"] }
uuid = { version = "1.18.1", features = ["v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
